# TS-Launcher

./: .gitignore  Cargo.toml  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
allay_core/: Cargo.toml  README.md  launcher_api.json
allay_core/src/: config.rs  error.rs  lib.rs  logger.rs  main.rs
allay_core/src/api/: auth.rs  java.rs  launcher.rs  mod.rs  process.rs  profiles.rs  settings.rs
allay_core/src/assets/: game_assets.rs  mod.rs
allay_core/src/event/: emit.rs  mod.rs
allay_core/src/minecraft/: arguments.rs  assets.rs  libraries.rs  mod.rs  parameters.rs  validate.rs  version.rs
allay_core/src/minecraft/loader/: loader.rs  mod.rs
allay_core/src/minecraft/loader/fabric/: handler.rs
allay_core/src/minecraft/loader/forge/: handler.rs  installer.rs  mod.rs
allay_core/src/process/: children.rs  mod.rs
allay_core/src/store/: instances.rs  launcher_assets.rs  mod.rs  old_instances.rs  old_launcher.rs  profiles.rs  settings.rs
allay_core/src/util/: app_path.rs  config.rs  download.rs  fetch.rs  io.rs  java.rs  metadata.rs  mod.rs  utils.rs
allay_core/src/util/oauth/: microsoft.rs  minecraft.rs  mod.rs
src/: App.tsx  i18n.ts  main.tsx  routes.tsx  store.ts  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  vibrancy.rs
src-tauri/src/api/: auth.rs  java.rs  mod.rs  player.rs  system.rs
src/api/: auth.ts  player.ts
src/assets/i18n/: zh_TW.json
src/interfaces/: IStoreProfilesPlayer.ts  IStoreProfilesUser.ts  IStoreSettingsGeneral.ts  IStoreSettingsJava.ts
src/invoke/: launcher.ts  store.ts
src/pages/components/Frame/: Frame.module.scss  Frame.scss  Frame.tsx
src/pages/components/alertConfirm/: AlertConfirm.tsx
src/pages/components/buttonFocus/: ButtonFocus.module.scss  ButtonFocus.tsx
src/pages/components/checkbox/: Checkbox.tsx
src/pages/components/crashPayback/: CrashPayback.tsx
src/pages/components/inputIcon/: InputIcon.module.scss  InputIcon.tsx
src/pages/components/parameters/: Parameters.module.scss  Parameters.tsx
src/pages/components/slider/: Slider.module.scss  Slider.tsx
src/pages/components/toggle/: Toggle.tsx
src/pages/fast_setup/login/: Login.tsx
src/pages/fast_setup/success/: Success.module.scss
src/pages/instanceSettings/: InstanceSettings.module.scss  InstanceSettings.tsx
src/pages/instanceSettings/components/menu/: Menu.module.scss  Menu.tsx
src/pages/instanceSettings/components/modList/: ModList.tsx
src/pages/instanceSettings/components/resourcePacks/: ResourcePacks.module.scss  ResourcePacks.tsx
src/pages/instanceSettings/components/screenshot/: Screenshot.tsx
src/pages/loading/: Loading.module.scss  Loading.tsx
src/pages/login/: Login.module.scss  Login.tsx
src/pages/main/: Main.module.scss  Main.tsx
src/pages/main/components/buttonPlay/: ButtonPlay.module.scss  ButtonPlay.tsx
src/pages/main/components/serverList/: ServerList.module.scss  ServerList.tsx
src/pages/main/components/top/: Top.module.scss  Top.tsx
src/pages/setting/: Setting.tsx
src/pages/setting/components/changelog/: Changelog.tsx
src/pages/setting/components/general/: General.tsx
src/pages/setting/components/information/: Information.tsx
src/pages/setting/menu/: Menu.tsx
src/pages/settings/: Settings.module.scss  Settings.tsx
src/pages/settings/components/changelog/: Changelog.module.scss  Changelog.tsx
src/pages/settings/components/general/: General.module.scss  General.tsx
src/pages/settings/components/information/: Information.module.scss  Information.tsx
src/pages/settings/components/language/: Language.module.scss  Language.tsx
src/pages/settings/components/menu/: SettingsMenu.module.scss  SettingsMenu.tsx
src/pages/welcome/: Welcome.module.scss
src/typings/: os.d.ts
ts_gui/: package.json
ts_gui/src/: App.tsx  i18n.ts  loader.ts  main.tsx  routes.tsx  styles.scss  updater.tsx
ts_gui/src-tauri/: Cargo.toml  tauri.conf.json
ts_gui/src-tauri/icons/: icon.icns
ts_gui/src-tauri/src/: error.rs  main.rs  shadows.rs  vibrancy.rs
ts_gui/src-tauri/src/api/: auth.rs  java.rs  launcher.rs  logger.rs  mod.rs  process.rs  store.rs  system.rs
ts_gui/src/assets/i18n/: zh_TW.json
ts_gui/src/interfaces/: IEventLoadingBarType.ts  IEventLoadingPayload.ts  ILASCModpackActionActionPlayer.ts  ILASCModpackActionActionRule.ts  ILASChildrenModpackAction.ts  ILAServerChildrenModpack.ts  ILauncherAssets.ts  ILauncherAssetsServer.ts  ILauncherAssetsServerChildren.ts  ILauncherAssetsServerChildrenAnnounment.ts  ILauncherAssetsServerChildrenAssets.ts  IMicrosoftDeviceAuth.ts  IStoreProfiles.ts  IStoreProfilesMicrosoftAuth.ts  IStoreSettingSelectedServer.ts  IStoreSettings.ts
ts_gui/src/invoke/: auth.ts  events.ts  java.ts  launcher.ts  logger.ts  process.ts  store.ts  system.ts
ts_gui/src/pages/components/alertConfirm/: AlertConfirm.tsx
ts_gui/src/pages/components/crashPayback/: CrashPayback.module.scss
ts_gui/src/pages/components/frame/: Frame.module.scss  Frame.tsx
ts_gui/src/pages/components/imageTool/: ImageTool.tsx
ts_gui/src/pages/components/parameters/: Parameters.tsx
ts_gui/src/pages/instanceSettings/: InstanceSettings.tsx
ts_gui/src/pages/main/: Main.module.scss  Main.tsx
ts_gui/src/pages/settings/: Settings.module.scss  Settings.tsx
ts_gui/src/pages/welcome/: Welcome.tsx
ts_gui/src/slices/: stateSlice.ts
(+77 files in other folders)
