[package]
name = "allay_core"
version = "1.0.0"
edition = "2021"
authors = ["Yu"]

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }

tauri = { version = "1.5", optional = true }

daedalus = { version = "0.1.27" }

uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
futures = "0.3"
regex = "1.9"
sha1 = "0.10.5"
bytes = "1"
zip = "0.6.6"
tempfile = "3.8.1"
toml = "0.8.1"
home = "0.5.5"
os_info = { version = "3", default-features = false }
sys-info = "0.9"
sysinfo = "0.29.11"
chrono = { version = "0.4.19", features = ["serde"] }
lazy_static = "1.4.0"
dunce = "1.0.3"
semver = "1.0.20"
keyring = "2"
ts-rs = "7.1.1"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-error = "0.2.0"
tracing-appender = "0.2.2"
thiserror = "1.0.50"

[features]
tauri = ["dep:tauri"]