[package]
name = "ts_gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]

allay_core = { path = "../../allay_core", features = ["tauri"] }

tauri = { version = "1.5", features = [ "dialog-open", "macos-private-api", "app-all", "window-unminimize", "window-unmaximize", "window-set-decorations", "window-minimize", "window-hide", "window-start-dragging", "window-show", "window-create", "window-maximize", "window-close", "shell-open"] }

tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

window-vibrancy = "0.4.3"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-error = "0.2.0"
tracing-appender = "0.2.2"
thiserror = "1.0.50"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
