[package]
name = "ts_gui"
version = "0.1.7"
description = "TS Launcher for TS 模組伺服器社群"
authors = ["TS Community Mod Team <tssoft058@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/TSCommunityModTW/TS-Launcher"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]

allay_core = { path = "../../allay_core", features = ["tauri"] }
tauri = { version = "1.5", features = [ "updater", "dialog-open", "macos-private-api", "app-all", "window-unminimize", "window-unmaximize", "window-set-decorations", "window-minimize", "window-hide", "window-start-dragging", "window-show", "window-create", "window-maximize", "window-close", "shell-open"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-vibrancy = "0.4.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-error = "0.2.0"
tracing-appender = "0.2.2"
thiserror = "1.0.50"
window-shadows = "0.2.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
